<resources>
    <string name="app_name">Memory Game</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">test</string>
    <string name="hiragana">Hiragana</string>
    <string name="katakana">Katakana</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="moves">Moves: </string>
    <string name="left">Left</string>
    <string name="back">Back</string>
</resources>